--- a/index.html
+++ b/index.html
@@ -18,24 +18,21 @@
       margin-bottom: 20px;
     }
 
-    /* 👇 修改后的图片样式 - 正方形 */
+    /* 头像样式 - 正方形 */
     img {
-      width: 400px;           /* 设置宽度 */
-      height: 400px;          /* 设置高度，使其成为正方形 */
-      object-fit: cover;      /* 保持图片比例，裁剪超出部分 */
-      display: block;         /* 独占一行，方便居中 */
-      margin: 20px auto;      /* 水平居中 + 上下留空 */
-      
-      /* 👇 让图片更好看的样式 */
-      border-radius: 16px;    /* 圆角 */
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12); /* 柔和阴影 */
-      transition: transform 0.3s ease, box-shadow 0.3s ease; /* 动画过渡 */
+      width: 400px;
+      height: 400px;
+      object-fit: cover;
+      display: block;
+      margin: 20px auto;
+      border-radius: 16px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    /* 👇 鼠标悬停时的效果 */
     img:hover {
-      transform: translateY(-5px);       /* 轻微上浮 */
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.18); /* 阴影变深 */
+      transform: translateY(-5px);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.18);
     }
 
     /* 联系方式区域 */
@@ -53,10 +50,10 @@
       font-weight: 500;
     }
 
+    /* 通用链接基础样式 */
     .contact-link {
       display: inline-block;
       padding: 12px 24px;
-      background-color: #FB7299;  /* B站主题色 */
       color: white;
       text-decoration: none;
       border-radius: 25px;
@@ -65,10 +62,68 @@
       margin: 0 10px;
     }
 
-    .contact-link:hover {
-      background-color: #EA6180;  /* 悬停时的B站色 */
+    /* B站专属样式 */
+    .contact-link.bilibili {
+      background-color: #FB7299;
+    }
+    .contact-link.bilibili:hover {
+      background-color: #EA6180;
       transform: translateY(-2px);
       box-shadow: 0 6px 15px rgba(251, 114, 153, 0.3);
+    }
+
+    /* 小红书专属样式 */
+    .contact-link.xiaohongshu {
+      background-color: #FF2442;
+    }
+    .contact-link.xiaohongshu:hover {
+      background-color: #E0002B;
+      transform: translateY(-2px);
+      box-shadow: 0 6px 15px rgba(255, 36, 66, 0.3);
+    }
+
+ /* 微信公众号 - 绿色主题 */
+    .contact-link.wechat { background-color: #07C160; } /* 微信绿 */
+    .contact-link.wechat:hover {
+      background-color: #06A652;
+      transform: translateY(-2px);
+      box-shadow: 0 6px 15px rgba(7, 193, 96, 0.3);
+    }
+
+    /* 二维码弹窗 */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      z-index: 1000;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: white;
+      padding: 20px;
+      border-radius: 12px;
+      text-align: center;
+      max-width: 90%;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.3);
+    }
+
+    .modal-content img {
+      width: 240px;
+      height: auto;
+      border-radius: 8px;
+      margin-top: 10px;
+    }
+
+    .close {
+      margin-top: 15px;
+      color: #07C160;
+      text-decoration: none;
+      font-weight: bold;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -78,14 +133,26 @@
   <p>我是万伯渊，这是我的第一个公开网站！</p>
   <p>我正在学习编程，未来会做得更好 💪</p>
   <p>AI编程一小步，人生一大步 ☘</p>
+  <p>始于20251115</p>
   
   <img src="万伯渊.jpg" alt="我的照片">
   
-  <!-- 👇 B站链接 -->
+  <!-- 社交链接 -->
   <div class="contact-section">
     <p>欢迎关注我！</p>
-    <a href="https://space.bilibili.com/1274633472" target="_blank" class="contact-link">📺 B站主页</a>
+    <a href="https://space.bilibili.com/1274633472" target="_blank" class="contact-link bilibili">📺 B站主页</a>
+    <span class="contact-link wechat" onclick="document.getElementById('wechatModal').style.display='block'">💬 微信公众号</span>
+    <a href="https://www.xiaohongshu.com/search_result?keyword=%25E4%25B8%2587%25E4%25BC%25AF%25E6%25B8%258A&source=unknown" 
+target="_blank" class="contact-link xiaohongshu">📕 小红书</a>
   </div>
-  
+  <!-- 微信二维码弹窗 -->
+  <div id="wechatModal" class="modal">
+    <div class="modal-content">
+      <h3>扫码关注我的公众号</h3>
+      <img src="wechat-qrcode.jpg" alt="微信公众号二维码">
+      <div class="close" onclick="document.getElementById('wechatModal').style.display='none'">✕ 关闭</div>
+    </div>
+  </div>
+
 </body>
 </html>
